<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="esvyda.markwiliams.controller.patient.PatientDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/view_patient_edit_toolbar"
        style="@style/AppTheme.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/view_patient_layout_content"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/screen_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/view_patient_edit_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_edit_name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/view_patient_edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/view_patient_edit_layout_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_edit_birthday">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/view_patient_edit_text_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:text="@string/default_date_placeholder" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/view_patient_edit_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_edit_phone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/view_patient_edit_text_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/view_patient_edit_button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_save" />

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/view_patient_loading"
        layout="@layout/view_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>