<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="esvyda.markwiliams.controller.appointment.AppointmentDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/view_appointment_edit_toolbar"
        style="@style/AppTheme.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/view_appointment_layout_content"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/screen_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/view_appointment_edit_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/appointment_edit_description">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/view_appointment_edit_text_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/view_appointment_edit_spinner_patient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/view_appointment_edit_layout_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/appointment_edit_time">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/view_appointment_edit_text_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:text="@string/default_date_placeholder" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/view_appointment_edit_layout_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/appointment_edit_time">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/view_appointment_edit_text_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:text="@string/default_time_placeholder" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/view_appointment_edit_spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>

            <Button
                android:id="@+id/view_appointment_edit_button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_save" />

        </LinearLayout>


    </ScrollView>

    <include
        android:id="@+id/view_appointment_edit_loading"
        layout="@layout/view_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

</LinearLayout>
